--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>slf4j-api</artifactId>
       <version>2.0.0-beta1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.13.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
